--- a/ep_syntaxhighlighting/static/css/shCore.css
+++ b/ep_syntaxhighlighting/static/css/shCore.css
@@ -54,11 +54,11 @@
 }
 
 .syntaxhighlighter {
-  width: 100% !important;
-  /*margin: 1em 0 1em 0 !important;*/
+  /*width: 100% !important;
+  margin: 1em 0 1em 0 !important;
   position: relative !important;
   overflow: auto !important;
-  font-size: 1em !important;
+  font-size: 1em !important;*/
 }
 .syntaxhighlighter.source {
   overflow: hidden !important;
