--- a/ep_syntaxhighlighting/templates/syntaxHighlightingEditbarButtons.ejs
+++ b/ep_syntaxhighlighting/templates/syntaxHighlightingEditbarButtons.ejs
@@ -1,5 +1,5 @@
 <li id="syntaxhighlighting" style="width: auto; background: #fff;">
-    <select id="syntaxes" style="border: 0; outline: none;" onchange="require('ep_etherpad-lite/static/js/pad_cookie').padcookie.setPref('SH_BRUSH', this.options[this.selectedIndex].value); window.location.reload();">
+    <select id="syntaxes" onchange="require('ep_etherpad-lite/static/js/pad_cookie').padcookie.setPref('SH_BRUSH', this.options[this.selectedIndex].value); window.location.reload();">
         <option value="undefined" selected>None</option>
         <option value="js">Javascript</option>
         <option value="ruby">Ruby</option>
